# pulp-os

./: .gitignore  Cargo.toml  README.txt  build.rs  flake.nix  justfile
kernel/: Cargo.toml
kernel/src/: error.rs  lib.rs
kernel/src/drivers/: input.rs  sdcard.rs  ssd1677.rs  storage.rs  strip.rs
kernel/src/kernel/: app.rs  bookmarks.rs  config.rs  console.rs  dir_cache.rs  handle.rs  mod.rs  scheduler.rs  tasks.rs  work_queue.rs
kernel/src/ui/: mod.rs  widget.rs
src/apps/: files.rs  home.rs  manager.rs  mod.rs  settings.rs  upload.rs
src/apps/reader/: epubs.rs  images.rs  mod.rs  paging.rs
src/apps/widgets/: button_feedback.rs  format.rs  mod.rs
src/fonts/: mod.rs
src/ui/: mod.rs
