[package]
name         = "pulp-kernel"
edition      = "2024"
rust-version = "1.88"
version      = "0.1.0"

[dependencies]
esp-hal.workspace             = true
embassy-executor.workspace    = true
embassy-time.workspace        = true
embassy-futures.workspace     = true
embassy-sync.workspace        = true
embedded-hal.workspace        = true
embedded-hal-async.workspace  = true
embedded-hal-bus.workspace    = true
embedded-graphics-core.workspace = true
embedded-graphics.workspace   = true
embedded-sdmmc.workspace      = true
critical-section.workspace    = true
static_cell.workspace         = true
nb.workspace                  = true
log.workspace                 = true
smol-epub.workspace           = true
esp-alloc = { version = "0.9.0", features = ["internal-heap-stats"] }
